--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -6,7 +6,9 @@
 #
 # https://github.com/P3TERX/Actions-OpenWrt
 # Description: Build OpenWrt using GitHub Actions
-#
+#https://github.com/qdk0901/openwrt-mt7620
+#https://github.com/qdk0901/openwrt-mt7620
+#https://github.com/qdk0901/openwrt-mt7620
 
 name: Build OpenWrt
 
@@ -20,8 +22,8 @@ on:
         default: 'true'
 
 env:
-  REPO_URL: https://github.com/openwrt/openwrt
-  REPO_BRANCH: openwrt-19.07
+  REPO_URL: https://github.com/qdk0901/openwrt-mt7620
+  REPO_BRANCH: openwrt-19.07.7
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config
   DIY_P1_SH: diy-part1.sh
