--- a/.config
+++ b/.config
@@ -98,3 +98,4 @@ CONFIG_RT2860V2_AP_APCLI=y
 CONFIG_RT2860V2_AP_COC=y
 CONFIG_RT2860V2_AP_V24_DATA_STRUCTURE=y
 CONFIG_PACKAGE_iw=y
+CONFIG_PACKAGE_luci-mtk-wifi=y
